--- a/Salieri.yml
+++ b/Salieri.yml
@@ -78,7 +78,7 @@ dependencies:
     - cachetools==4.2.2
     - chardet==3.0.4
     - click==8.0.1
-    - clip==1.0
+    #- clip==1.0
     - cloudpickle==1.6.0
     - comtypes==1.1.10
     - contextvars==2.4
@@ -145,10 +145,10 @@ dependencies:
     - termcolor==1.1.0
     - threadpoolctl==2.1.0
     - tifffile==2020.9.3
-    - torch==1.7.1+cu110
-    - torchvision==0.8.2+cu110
     - tqdm==4.61.0
     - typing-extensions==3.10.0.0
+    #- torch==1.7.1+cu110
+    #- torchvision==0.8.2+cu110
     - urllib3==1.26.5
     - werkzeug==2.0.1
     - wrapt==1.12.1
